k3s-nodes-automate/manifests/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: web
---
apiVersion: v1
kind: Namespace
metadata:
  name: db
---
apiVersion: v1
kind: Namespace
metadata:
  name: dns
---
apiVersion: v1
kind: Namespace
metadata:
  name: cf-tunnel
---
apiVersion: v1
kind: Namespace
metadata:
  name: cert-manager
---
