k3s-nodes-automate/manifests/cloudflared.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cf-deploy
  namespace: cf
  labels:
    app: cf
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cf
  template:
    metadata:
      labels:
        app: cf
    spec:
      containers:
        - name: cf
          image: cloudflare/cloudflared:2024.12.2
          args: ["tunnel" , "--no-autoupdate", "run", "--token", "$(CF_TOKEN)"]
---
