k3s-nodes-automate/manifests/homepage.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homepage-deploy
  namespace: prod
  labels:
    app: homepage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homepage
  template:
    metadata:
      labels:
        app: homepage
    spec:
      containers:
        - name: homepage
          image: ghcr.io/gethomepage/homepage:v0.9.13
          ports:
            - name: http
              containerPort: 3000
          volumeMounts:
          - name: homepage-storage
            mountPath: /app/config
      volumes:
        - name: homepage-storage
          persistentVolumeClaim:
            claimName: homepage-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: homepage-svc
  namespace: prod
  labels:
    service: homepage
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 3000
  selector:
    app: homepage
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage-ingress
  namespace: prod
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  tls:
  - hosts:
    - "home.local.lttviet.com"
    secretName: home-tls
  rules:
    - host: home.local.lttviet.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homepage-svc
                port:
                  number: 80
---
