k3s-nodes-automate/manifests/navidrome.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: navidrome-deploy
  namespace: prod
  labels:
    app: navidrome
spec:
  replicas: 1
  selector:
    matchLabels:
      app: navidrome
  template:
    metadata:
      labels:
        app: navidrome
    spec:
      containers:
        - name: navidrome
          image: deluan/navidrome:0.53.3
          ports:
            - name: http
              containerPort: 4533
          volumeMounts:
          - name: navidrome-storage
            mountPath: /data
          - name: music-storage
            mountPath: /music
            readOnly: true
      volumes:
        - name: navidrome-storage
          persistentVolumeClaim:
            claimName: navidrome-pvc
        - name: music-storage
          persistentVolumeClaim:
            claimName: music-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: navidrome-svc
  namespace: prod
  labels:
    service: navidrome
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 4533
  selector:
    app: navidrome
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: navidrome-ingress
  namespace: prod
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  tls:
  - hosts:
    - "audio.local.lttviet.com"
    secretName: audio-tls
  rules:
    - host: audio.local.lttviet.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: navidrome-svc
                port:
                  number: 80
---
