k3s-nodes-automate/manifests/redis.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: db
  labels:
    app: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis/redis-stack:7.4.0-v1
          ports:
            - name: database
              containerPort: 6379
            - name: insight
              containerPort: 8001
          volumeMounts:
            - name: storage
              mountPath: /data
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: redis
---
apiVersion: v1
kind: Service
metadata:
  name: redis-clusterip
  namespace: db
spec:
  type: ClusterIP
  ports:
    - name: db
      port: 6379
      targetPort: 6379
    - name: http
      port: 80
      targetPort: 8001
  selector:
    app: redis
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redis
  namespace: db
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  tls:
    - hosts:
      - "redis-insight.local.lttviet.com"
      secretName: lttviet.com
  rules:
    - host: redis-insight.local.lttviet.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: redis-clusterip
                port:
                  number: 80
---
